# voxel-preview

./: .gitignore  .travis.yml  README.md  stack.yaml
.ci/travis/: build.sh  init.sh  test.sh
libvts/: CMakeLists.txt
libvts/debian/: .gitignore  README.Debian  README.source  changelog  changelog.in  control  copyright  libvts-dev.install  libvts-runtime.install  rules
libvts/include/: kernels.h  vts.h  vts_error.h  vts_internal.h
libvts/kernel/: cast.cl  color.cl  draw_points.cl  scale.cl  test.cl
libvts/source/: internal.cc  kernels.cc  vts.cc
libvts/test/: api_test.cc  test.cc
vts/: ChangeLog.md  vts.cabal
vts-transformer/: vts-transformer.cabal
vts-transformer/src/: Main.hs
vts-viewer/: ChangeLog.md  vts-viewer.cabal
vts-viewer/app/: vts-viewer.hs
vts-viewer/cbits/: vts-view.c
vts-viewer/include/: vts-view.h
vts-viewer/src/VTS/: Viewer.hs
vts-viewer/src/VTS/Viewer/: Binding.hsc
vts/src/VTS/: Base.hs
vts/src/VTS/Base/: Instance.hs  Internal.hs
vts/test/VTS/: BaseSpec.hs
vts/test/VTS/Base/: InternalSpec.hs
